--- a/_sass/modules/_split.scss
+++ b/_sass/modules/_split.scss
@@ -62,3 +62,12 @@ h4 .link {
 		background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0) 50%,lighten($hoverColour,20%) 50%);
 	}
 }
+
+.logo {
+	.logo-shadow {
+		border: 1px solid red;	
+	}
+}
+.we-all-float-down-here {
+	position: absolute;	
+}
