--- a/_sass/modules/_split.scss
+++ b/_sass/modules/_split.scss
@@ -34,6 +34,10 @@ aside,
 		@include breakpoint(break-1) {
 			max-width: 90%;
 		}
+		.we-all-float-down-here {
+			position: absolute;
+			margin: -200px auto auto auto;
+		}
 	}
 	.what-we-do {
 		text-align: center;
@@ -63,11 +67,3 @@ h4 .link {
 	}
 }
 
-.logo {
-	.logo-shadowed {
-		border: 1px solid red;	
-	}
-}
-.we-all-float-down-here {
-	position: absolute;	
-}
